--- a/src/app/user-select/user-select.component.html
+++ b/src/app/user-select/user-select.component.html
@@ -1,7 +1,7 @@
 <div class="content">
   <div class="content-container">
           <app-user-info [user] = "selectedUser"></app-user-info>
-          <app-chat-messages [user] = "selectedUser"></app-chat-messages>
+          <app-chat-messages [selectedUser] = "selectedUser"></app-chat-messages>
   </div>
 
   <div class="sidebar">
