--- a/src/app/user-select/user-select.component.html
+++ b/src/app/user-select/user-select.component.html
@@ -1,7 +1,7 @@
 <div class="content">
   <div class="content-container">
           <app-user-info [user] = "selectedUser"></app-user-info>
-          <app-chat-messages [selectedUser] = "selectedUser"></app-chat-messages>
+          <app-chat-messages [selectedUser] = "selectedUser" [currentUser] = "currentUser"></app-chat-messages>
   </div>
 
   <div class="sidebar">
@@ -14,10 +14,8 @@
 
       <div class='sidebar-users-wrap'>
         <div *ngFor="let user of users" class="sidebar-users">
-            <a href="#" 
-              [class.selected]="user === selectedUser"
-              (click)="setSelectedUser(user)">
-              <div class="sidebar-user">
+            
+              <div class="sidebar-user" [class.selected]="user === selectedUser" (click)="setSelectedUser(user)">
                 <div class="user-image">
                   <img src="{{user.image}}">
                   <span [ngClass]="{'user-status-online': user.status }"></span>
@@ -27,7 +25,7 @@
                   <p>{{textFormat(user.description)}}</p>
                 </div>
               </div>
-            </a>
+            
           </div>
       </div>
 
